Bug 1836024 - Don't mask Devanagari DANDA characters from the font cmap when shaping support is absent, as they may be used by other scripts. r=emilio

Also a couple more Arabic-block characters that were not handled in bug 1834316, per comment 3.

Differential Revision: https://phabricator.services.mozilla.com/D179670